--- a/www/resources/styles/app.css
+++ b/www/resources/styles/app.css
@@ -2,8 +2,9 @@
 
 body {
   margin: 0;
-  font-family: 'Titillium Web', 'Roboto', 'Noto', sans-serif;
+  font-family: var(--app-font-family);
+  font-size: var(--app-font-size);
   line-height: 1.5;
   min-height: 100vh;
-  background-color: #eeeeee;
+  background-color: var(--app-background-color);
 }
