--- a/www/resources/styles/app.css
+++ b/www/resources/styles/app.css
@@ -6,5 +6,5 @@ body {
   font-size: var(--app-font-size);
   line-height: 1.5;
   min-height: 100vh;
-  background-color: var(--app-background-color);
+  background-color: var(--app-background);
 }
